# solana-governance

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  SECURITY.md  networks.toml  rust-analyzer.toml  txtx.yml
.github/workflows/: ci.yaml  release.yaml
docs/: .gitignore  bun.lockb  next.config.mjs  package.json
docs/public/_pagefind/: pagefind-entry.json  pagefind.en_3ebcbf56a6.pf_meta  pagefind.en_e624bd8332.pf_meta
docs/src/: mdx-components.js
docs/src/app/: layout.jsx
docs/src/content/: _meta.js  index.mdx
frontend/: .env.example  README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/docs/: governance-config-cache.md
frontend/src/: env.ts
frontend/src/app/: layout.tsx  providers.tsx
frontend/src/chain/: helpers.ts
frontend/src/components/: Footer.tsx  index.ts
frontend/src/contexts/: EndpointContext.tsx  GovernanceConfigContext.tsx  NcnApiContext.tsx
frontend/src/data/: createProposalMutation.ts  getProposalVoteOverrides.ts  getProposals.ts  getValidators.ts  getVoteAccounts.ts  getVoterWalletSummary.ts  index.ts  supportProposalMutation.ts
frontend/src/helpers/: date.ts  proposalPage.ts  proposalPhases.ts
frontend/src/hooks/: index.ts  useCastVote.ts  useCastVoteOverride.ts  useChainVoteAccount.ts  useCreateProposal.ts  useGetValidatorsTable.ts  useGovernanceConfig.ts  useModifyVote.ts  useModifyVoteOverride.ts  useProposalSimdDescription.ts  useProposalVotes.ts  useProposals.ts  useSupportProposal.ts  useValidatorsVoterSplits.ts  useVotes.ts  useWalletRole.ts
frontend/src/lib/: constants.ts  defaultNcnApiUrl.ts  getGovernanceConfig.ts  getRpcUrls.ts  proposals.ts
frontend/src/types/: proposals.ts  topVoters.ts
integration-tests/: .gitignore  Cargo.toml  README.md
integration-tests/src/: full_flow.rs  harness.rs  lib.rs  proposal_validation.rs
metadata/security/: ncn-snapshot-security.json  svmgov-program-security.json
ncn/: .dockerignore  .gitignore  Anchor.toml  Cargo.toml  QUICKSTART.md  README.md
ncn-router/: .gitignore  Cargo.toml  README.md  config.toml
ncn-router/src/: cron_job.rs  main.rs  router.rs
ncn/.cargo/: config.toml
ncn/cli/: Cargo.toml
ncn/cli/src/: consts.rs  lib.rs  main.rs  merkle.rs
ncn/cli/src/utils/: io.rs  keypair.rs  mod.rs  parsers.rs  path.rs  send_utils.rs  squads.rs
ncn/programs/gov-v1/: Cargo.toml  README.md
ncn/programs/gov-v1/src/: lib.rs
ncn/programs/gov-v1/src/instructions/: mod.rs
ncn/programs/gov-v1/src/instructions/ballot/: init_ballot_box.rs  mod.rs  set_tie_breaker.rs
ncn/programs/gov-v1/src/instructions/program_config/: finalize_proposed_authority.rs  init_program_config.rs
ncn/programs/gov-v1/src/instructions/verify/: close_meta_merkle_proof.rs  init_meta_merkle_proof.rs  mod.rs  verify_merkle_proof.rs
ncn/programs/gov-v1/src/state/: ballot_box.rs
ncn/programs/ncn-snapshot/: Cargo.toml  README.md
ncn/programs/ncn-snapshot/src/: error.rs  lib.rs  merkle_helper.rs
ncn/programs/ncn-snapshot/src/instructions/ballot/: cast_vote.rs  finalize_ballot.rs  init_ballot_box.rs  remove_vote.rs  reset_ballot_box.rs
ncn/programs/ncn-snapshot/src/instructions/program_config/: init_program_config.rs  mod.rs  update_operator_whitelist.rs  update_program_config.rs
ncn/programs/ncn-snapshot/src/state/: consensus_result.rs  mod.rs  program_config.rs  proof.rs
ncn/scripts/: install-ncn-cli.sh  install-verifier-service.sh
ncn/tests/: Cargo.toml
ncn/tests/src/: lib.rs  test_full_program_flow.rs
ncn/tests/src/utils/: assert.rs  data_types.rs  fetch_utils.rs  mod.rs
ncn/verifier-service/: Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  build.rs
ncn/verifier-service/src/: main.rs  metrics.rs  middleware.rs  rate_limit.rs  types.rs  upload.rs  utils.rs
ncn/verifier-service/src/database/: constants.rs  migrator.rs  mod.rs  operations.rs  path.rs  sql.rs
ncn/verifier-service/src/database/models/: database.rs  mod.rs  views.rs
ncn/verifier-service/src/scripts/: cleanup-local.sh  cleanup.sh  setup.sh
ncn/verifier-service/tests/: e2e_binary.rs  rate_limit.rs
ncn/verifier-service/tests/common/: mod.rs
plans/: integration-tests.md
runbooks/: README.md
runbooks/deployment/: main.tx  signers.local-keypair.tx  signers.local-squads.tx  signers.mainnet-web-wallet.tx  signers.mainnet.tx
scripts/: build-program.sh  setup-jito-tip-router.sh  sync-program-ids.sh
squads-client/: .mcp.json  Cargo.toml  README.md
squads-client/src/: client.rs  discriminator.rs  error.rs  id.rs  instructions.rs  lib.rs  pda.rs  router.rs  small_vec.rs  state.rs
squads-client/src/message/: compiled_keys.rs  mod.rs
squads-client/tests/: integration.rs  regression.rs
svmgov/cli/: .gitignore  Cargo.toml  install.sh
svmgov/cli/idls/: govcontract.json  svmgov_program.json
svmgov/cli/src/: config.rs  constants.rs  main.rs
svmgov/cli/src/instructions/: cast_vote.rs  cast_vote_override.rs  create_proposal.rs  finalize_proposal.rs  global_config.rs  init_index.rs  mod.rs  modify_vote.rs  modify_vote_override.rs  support_proposal.rs
svmgov/cli/src/utils/: api_helpers.rs  commands.rs  config_command.rs  init.rs  mod.rs  squads.rs  utils.rs
svmgov/cli/tests/: utils_tests.rs
svmgov/contract/: Anchor.toml  package.json  readme.md
svmgov/contract/tests/: cache-serialization-isolated-test.ts  detailed-vote-tracking-test.ts  dos-prefunding-attack-test.ts  (+4 more)
svmgov/program/: .gitignore  Anchor.toml  readme.md
svmgov/program/programs/svmgov_program/: Cargo.toml
svmgov/program/programs/svmgov_program/src/: constants.rs  error.rs  events.rs  lib.rs  merkle_helpers.rs  utils.rs
svmgov/program/programs/svmgov_program/src/instructions/: cast_vote.rs  cast_vote_override.rs  create_proposal.rs  finalize_proposal.rs  flush_merkle_root.rs  initialize_config.rs  mod.rs  modify_vote.rs  modify_vote_override.rs  support_proposal.rs  transfer_admin.rs  update_config.rs  update_config_admin.rs
svmgov/program/programs/svmgov_program/src/state/: global_config.rs  mod.rs  proposal.rs  proposal_index.rs  vote.rs  vote_override.rs  vote_override_cache.rs
(+151 files in other folders)
