[workspace]
members = [
    "cli",
    "programs/*",
    "tests",
    "verifier-service"
]

resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
log = "0.4.22"
env_logger = "0.10.2"
meta-merkle-tree= { path = "../jito-tip-router/meta_merkle_tree/" }
tip-router-operator-cli = { path = "../jito-tip-router/tip-router-operator-cli/" }
solana-accounts-db = { package = "solana-accounts-db", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-runtime = { package = "solana-runtime", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-vote-program = { package = "solana-vote-program", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-vote = { package = "solana-vote", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-program = { version = "3.0.0", default-features = false, features = [] }
solana-sdk = "=3.0.0"
solana-stake-interface = { version = "2.0.1", features = ["sysvar"] }
anchor-lang = "0.31.1"
anchor-client = "0.31.1"

[patch.crates-io]
solana-account-decoder = { package = "solana-account-decoder", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-account-decoder-client-types = { package = "solana-account-decoder-client-types", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-accounts-db = { package = "solana-accounts-db", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-bloom = { package = "solana-bloom", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-bpf-loader-program = { package = "solana-bpf-loader-program", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-bucket-map = { package = "solana-bucket-map", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-builtins-default-costs = { package = "solana-builtins-default-costs", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-clap-utils = { package = "solana-clap-utils", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-cli-config = { package = "solana-cli-config", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-client = { package = "solana-client", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-compute-budget = { package = "solana-compute-budget", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-connection-cache = { package = "solana-connection-cache", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-core = { package = "solana-core", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-cost-model = { package = "solana-cost-model", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-curve25519 = { package = "solana-curve25519", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-entry = { package = "solana-entry", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-faucet = { package = "solana-faucet", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-fee = { package = "solana-fee", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-geyser-plugin-manager = { package = "solana-geyser-plugin-manager", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-gossip = { package = "solana-gossip", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-lattice-hash = { package = "solana-lattice-hash", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-ledger = { package = "solana-ledger", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-loader-v4-program = { package = "solana-loader-v4-program", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-measure = { package = "solana-measure", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-merkle-tree = { package = "solana-merkle-tree", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-metrics = { package = "solana-metrics", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-net-utils = { package = "solana-net-utils", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-perf = { package = "solana-perf", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-poh = { package = "solana-poh", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-poseidon = { package = "solana-poseidon", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-program-runtime = { package = "solana-program-runtime", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-pubsub-client = { package = "solana-pubsub-client", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-quic-client = { package = "solana-quic-client", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-rayon-threadlimit = { package = "solana-rayon-threadlimit", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-remote-wallet = { package = "solana-remote-wallet", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
#solana-timings = { package = "solana-timings", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-unified-scheduler-logic = { package = "solana-unified-scheduler-logic", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-unified-scheduler-pool = { package = "solana-unified-scheduler-pool", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-rpc = { package = "solana-rpc", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-rpc-client = { package = "solana-rpc-client", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-rpc-client-api = { package = "solana-rpc-client-api", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-rpc-client-nonce-utils = { package = "solana-rpc-client-nonce-utils", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-runtime = { package = "solana-runtime", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-runtime-transaction = { package = "solana-runtime-transaction", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-send-transaction-service = { package = "solana-send-transaction-service", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-stake-program = { package = "solana-stake-program", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-storage-bigtable = { package = "solana-storage-bigtable", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-storage-proto = { package = "solana-storage-proto", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-streamer = { package = "solana-streamer", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-svm = { package = "solana-svm", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
#solana-svm-rent-collector = { package = "solana-svm-rent-collector", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-svm-transaction = { package = "solana-svm-transaction", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-system-program = { package = "solana-system-program", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
#solana-thin-client = { package = "solana-thin-client", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-tpu-client = { package = "solana-tpu-client", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-transaction-status = { package = "solana-transaction-status", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-transaction-status-client-types = { package = "solana-transaction-status-client-types", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-transaction-metrics-tracker = { package = "solana-transaction-metrics-tracker", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-turbine = { package = "solana-turbine", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
#solana-type-overrides = { package = "solana-type-overrides", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-udp-client = { package = "solana-udp-client", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-version = { package = "solana-version", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-vote = { package = "solana-vote", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-vote-program = { package = "solana-vote-program", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-wen-restart = { package = "solana-wen-restart", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
solana-zk-elgamal-proof-program = { package = "solana-zk-elgamal-proof-program", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
#solana-zk-sdk = { package = "solana-zk-sdk", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
#solana-zk-token-proof-program = { package = "solana-zk-token-proof-program", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
#solana-zk-token-sdk = { package = "solana-zk-token-sdk", git = "https://github.com/exo-tech-xyz/jito-solana.git", rev = "c9205ba7712b5bfda97ace7fc9c354fabaa6457f" }
